--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,25 +14,22 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.0.0
+        terraform_version: 1.6.2
+        cli_config_credentials_token: ${{ secrets.TFC_API_TOKEN }}
 
     - name: Initialize Terraform
-      run: terraform init ./module
+      run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan ./module
+      run: terraform plan
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve ./module
-
-    - name: Set up PowerShell
-      uses: PowerShell/setup-powershell@v0
-      with:
-        pwsh-version: '7.x'
+      run: terraform apply -auto-approve
 
     - name: Run PowerShell script
+      shell: pwsh
       run: |
         .\check.ps1
       env:
